08_networking/gateway.yaml
# Gateway - Entry point for all HTTP traffic into the cluster.
# References GatewayParameters above to configure its Service as NodePort.
# HTTPRoutes in any namespace can attach to this Gateway.
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: http
  namespace: kgateway-system
spec:
  gatewayClassName: kgateway
  infrastructure:
    parametersRef:
      name: custom-gw-params
      group: gateway.kgateway.dev
      kind: GatewayParameters
  listeners:
    - protocol: HTTP
      port: 8080
      name: http
      allowedRoutes:
        namespaces:
          from: All
